--- a/views/trademark-order/sou.ejs
+++ b/views/trademark-order/sou.ejs
@@ -41,7 +41,7 @@
                       </div>
                       <div class="nt-bx-footer">
                         <div class="tm-nt-ce">
-                            <p class="h6 text-center">We need to recieve your instructions no later then: <strong class="dspl-blk"><em class="far fa-calendar-day"></em> <%= moment(action.deadlineDate).format('MMM D, YYYY') %></strong></p>
+                            <p class="h6 text-center">We need to recieve your instructions no later than: <strong class="dspl-blk"><em class="far fa-calendar-day"></em> <%= moment(action.deadlineDate).format('MMM D, YYYY') %></strong></p>
                         </div>
                       </div>
                   </div>
