--- a/email-templates/noa-3weeks-plain.ejs
+++ b/email-templates/noa-3weeks-plain.ejs
@@ -23,19 +23,23 @@
 <p style="margin:0">&nbsp;</p>
 
 <p style="margin:0">
-Today I have good news for you: The United States Patent and Trademark Office (USPTO) has issued a “Notice of Allowance” (NOA), which means that in principle you have received the green light for your brand <%= mailData.trademark.name %> to be registered as a trademark.
+  Today I have good news for you: The United States Patent and Trademark Office (USPTO) has issued a “Notice of Allowance” (NOA), which means that in principle you have received the green light for your brand <%= mailData.trademark.name %> to be registered as a trademark.
 </p>
 <p style="margin:0">&nbsp;</p>
 <p style="margin:0">
-Now unlike many other trademark jurisdictions, the USPTO makes the registration of a trademark dependent on actual use, and such use has to be declared and proven by filing what is called a “Statement of Use”.
+  Now unlike many other trademark jurisdictions, the USPTO makes the registration of a trademark dependent on actual use, and such use has to be declared and proven by filing what is called a “Statement of Use”.
 </p>
 <p style="margin:0">&nbsp;</p>
 <p style="margin:0">
-You have 6 months from the issue date of the NOA (which was on <%= mailData.dateFiledFormatted %>) to file such a statement with the USPTO. If you are not using the trademark now and you are unable to declare use within that time frame, you can file for an extension and get another 6 months (but there are limits after that).
+  Alongside with your declaration, you need to include a “specimen” (like a photo, screen grab of a website where the product is offered etc.) – as the examiner needs to see that you are actually offering the product or service to the public in the United States.
 </p>
 <p style="margin:0">&nbsp;</p>
 <p style="margin:0">
-  Please click on the following link, which is self-explanatory:  
+  You have 6 months from the issue date of the NOA (which was on <%= mailData.dateFiledFormatted %>) to file such a statement. If you are not using the trademark now and you are unable to declare use within that time frame, you can file for an extension and get another 6 months (but there are limits after that).
+</p>
+<p style="margin:0">&nbsp;</p>
+<p style="margin:0">
+  At this point, you have several options – please click on the following link, which is self-explanatory:<br> 
 <a href="https://www.trademarkers.com/<%= mailData.number %>/statement-of-use" target="_blank" >
   https://www.trademarkers.com/<%= mailData.number %>/statement-of-use
 </a>
