--- a/email-templates/noa-4weeks-plain.ejs
+++ b/email-templates/noa-4weeks-plain.ejs
@@ -22,11 +22,15 @@
 </p>
 <p style="margin:0">&nbsp;</p>
 <p>
-I wanted to follow up with you, as until now we have not year received any response from you how to handle the “Notice of Allowance” that was issued on <%= mailData.dateFiledFormatted %>.
+  I wanted to follow up with you, as until now we have not year received any response from you how to handle the “Notice of Allowance” that was issued on <%= mailData.dateFiledFormatted %>.
 </p>
 <p style="margin:0">&nbsp;</p>
 <p>
-As a reminder, the United States Patent and Trademark Office (USPTO) has issued a “Notice of Allowance” (NOA), which means that in principle you have received the green light for your brand <%= mailData.trademark.name %> to be registered as a trademark, but unlike many other trademark jurisdictions, the USPTO makes the registration of a trademark dependent on actual use, and a “Statement of Use” must be made before the 6 month deadline after issuance (<%= mailData.dateDeadFormatted %>).
+  Alongside with your declaration, you need to include a “specimen” (like a photo, screen grab of a website where the product is offered etc.) – as the examiner needs to see that you are actually offering the product or service to the public in the United States.
+</p>
+<p style="margin:0">&nbsp;</p>
+<p>
+  As a reminder, the United States Patent and Trademark Office (USPTO) has issued a “Notice of Allowance” (NOA), which means that in principle you have received the green light for your brand <%= mailData.trademark.name %> to be registered as a trademark, but unlike many other trademark jurisdictions, the USPTO makes the registration of a trademark dependent on actual use, and a “Statement of Use” must be made before the 6 month deadline after issuance (<%= mailData.dateDeadFormatted %>).
 </p>
 <p style="margin:0">&nbsp;</p>
 <p>
@@ -34,7 +38,7 @@ As a reminder, the United States Patent and Trademark Office (USPTO) has issued 
 </p>
 <p style="margin:0">&nbsp;</p>
 <p>
-  Please click on the following link, which is self-explanatory:  
+  Please click on the following link, which is self-explanatory:<br>
 <a href="https://www.trademarkers.com/<%= mailData.number %>/statement-of-use" target="_blank" >
   https://www.trademarkers.com/<%= mailData.number %>/statement-of-use
 </a>
