update template with uspto link

--- a/email-templates/noa-4weeks-plain.ejs
+++ b/email-templates/noa-4weeks-plain.ejs
@@ -44,6 +44,16 @@
 </a>
 </p>
 
+  <% if ( showUsptoLink ) { %>
+  <p style="margin:0">&nbsp;</p>
+  <p style="margin:0">
+    You can see this "Notice of Allowance" (and the continued progress of your trademark application) in the database of the USPTO at: <br>
+    <a href="https://tsdr.uspto.gov/documentviewer?caseId=<%= mailData.serialNumber %>" target="_blank" >
+      https://tsdr.uspto.gov/documentviewer?caseId=<%= mailData.serialNumber %>
+    </a>
+  </p>
+  <% } %>
+
 <p style="margin:0">&nbsp;</p>
 <p style="margin:0">&nbsp;</p>
 <p >Best regards,
