--- a/views/layouts/public-layout-interactive.ejs
+++ b/views/layouts/public-layout-interactive.ejs
@@ -100,6 +100,37 @@ $( document ).ready(function() {
       return false;
   });
 
+  var shipmentOptInput = $('.crt-fct-opt > .fieldset > input[type="checkbox"]');
+  var fedexShipmentOptInput = $('.crt-fct-opt-fedex > .fieldset > input[type="checkbox"]');
+
+  $(shipmentOptInput).change(function(){
+    if(this.checked != true){
+      $(this).parent('.fieldset').parent('.crt-fct-opt').removeClass('crt-fct-opt-active');
+      return false;
+    }
+    else{
+      $(this).parent('.fieldset').parent('.crt-fct-opt').addClass('crt-fct-opt-active');
+        return true;
+    }
+  });
+
+  $('#CertificateDeliverySelection').click(function(){
+        if(fedexShipmentOptInput.prop("checked") != true){
+        $('.cc-section-on-call').removeClass("cc-section-on-call-active");
+        $('html, body').animate({scrollTop: "0"}, 1000);
+        return false;
+        }  
+        else{
+        $('.cc-section-on-call').addClass("cc-section-on-call-active");
+        $('html, body').animate({scrollTop: "900"}, 1000);
+        setTimeout(function(){
+            $('.cc-form-self #name').focus();
+
+        }, 100);
+        return true;
+        }
+  });
+
   // $(".btn-form-update").click(function(){
     
   //   let action = $(this).attr('data-action');
