--- a/email-templates/noa-3weeks-plain.ejs
+++ b/email-templates/noa-3weeks-plain.ejs
@@ -45,7 +45,7 @@
 </a>
 </p>
 
-<% if ( showUsptoLink ) { %>
+<% if ( mailData.showUsptoLink ) { %>
 <p style="margin:0">&nbsp;</p>
 <p style="margin:0">
   You can see this "Notice of Allowance" (and the continued progress of your trademark application) in the database of the USPTO at: <br>
