--- a/views/trademark-order/sou.ejs
+++ b/views/trademark-order/sou.ejs
@@ -56,11 +56,11 @@
               <div class="row">
                 <div class="col-xl-8 col-lg-12">
                   <div class="or-area or-area-a">
-                    <h2 class="h6 or-area-p">Not being legally able to put your domain to work as a website may infringe on existing trademarks,</h2>
+                    <h2 class="h6 or-area-p">File a "Statement of Use" together with evidence if actual use in commerce ("specimen") - such specimen can be copies of catalogues, websites, invoices, and any documentation that you have the shows the examiner that you are offering all the goods and services that you stated in your trademark application</h2>
                   </div>
                   <div class="or-seperator"><span class="or-label">or</span></div>
                   <div class="or-area or-area-b">
-                    <h2 class="h6 or-area-p">Even worse, an owner of a registered trademark can actually use the Uniform Dispute Resolution Policy (or UDRP) to demand arbitration in which you can potentially lose your domain name ${domain} without any compensation (why am I subject to these arbitration proceedings)</h2>
+                    <h2 class="h6 or-area-p">if you are unable to do that because your product is not ready or offered, file for an EXTENSION that grants you an additional 6 months beyond the time limit set by the USPTO</h2>
                   </div>
                 </div>
               </div>
