--- a/views/trademark-order/sou.ejs
+++ b/views/trademark-order/sou.ejs
@@ -13,7 +13,8 @@
                 <!-- Head Left Pane -->
                 <div class="col-lg-8">
                   <h1 class="h1"><strong>IMPORTANT NOTICE:</strong></h1>
-                  <h2 class="h4">STATEMENT OF USE DUE FOR YOUR TRADEMARK <%= action.trademark.name %></h2>
+                  <h2 class="h4">STATEMENT OF USE DUE FOR YOUR TRADEMARK </h2>
+                  <h2 class="text-center"><%= action.trademark.name %></h2>
                   <p class="h6">A “Statement of Use” must be filed for your U.S. Trademark Application!</p> 
                   <p>According to the rules of the United States Patent and Trademark Office (USPTO), you must declare the use of your trademark by filing a “Statement of Use” for your trademark application.</p>
                   <p>From the time the USPTO communicates that your trademark can be registered in principle, you usually have 6 months to either:</p>
