--- a/email-templates/noa-3weeks-plain.ejs
+++ b/email-templates/noa-3weeks-plain.ejs
@@ -49,8 +49,8 @@
 <p style="margin:0">&nbsp;</p>
 <p style="margin:0">
   You can see this "Notice of Allowance" (and the continued progress of your trademark application) in the database of the USPTO at: <br>
-  <a href="https://tsdr.uspto.gov/documentviewer?caseId=<%= mailData.serialNumber %>" target="_blank" >
-    https://tsdr.uspto.gov/documentviewer?caseId=<%= mailData.serialNumber %>
+  <a href="https://tsdr.uspto.gov/documentviewer?caseId=sn<%= mailData.serialNumber %>" target="_blank" >
+    https://tsdr.uspto.gov/documentviewer?caseId=sn<%= mailData.serialNumber %>
   </a>
 </p>
 <% } %>
